# pulse

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  README_ZH.md  bug-report.json  package-lock.json  package.json  reasonix.toml.example  tailwind.config.ts
src/: App.tsx  LogViewer.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/pulse-cli/: Cargo.toml
src-tauri/pulse-cli/src/: main.rs
src-tauri/pulse-core/: Cargo.toml
src-tauri/pulse-core/src/: io.rs  lib.rs  test_runner.rs
src-tauri/pulse-mcp/src/: main.rs
src-tauri/src/: cli.rs  io.rs  lib.rs  main.rs
src/components/: AuthPanel.tsx  ConfirmDialog.tsx  ExportDialog.tsx  ImportDialog.tsx  JsonEditor.tsx  JsonHighlighter.tsx  PromptDialog.tsx  RequestPanel.tsx  ResponsePanel.tsx  SaveDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  Toast.tsx
src/hooks/: usePulse.ts
src/shortcuts/: ShortcutEngine.ts  defaults.ts  types.ts  useActiveScope.ts
src/types/: index.ts
