[package]
name = "pulse-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mime = "0.3"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
